[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.5"
itertools = "0.10.3"
gag = "^1.0"
prettytable-rs = "^0.10"
lazy_static = "1.2.0"
phf = "0.11.2"
phf_macros = "0.11.2"
pcre2 = "0.2.6"
clap = { version = "4.4.11", features = ["derive"]}
